# slot-machines

./: .env  .envrc  .gitignore  README.md  compose.yaml
libs/utils/: pyproject.toml
libs/utils/source/utils/: read_env.py
services/login/: Dockerfile  pyproject.toml
services/login/source/login/: config.py  main.py
services/mongodb/: volumes.yaml
services/rabbitmq/: volumes.yaml
services/sm/: Dockerfile  pyproject.toml
services/sm/source/sm/: main.py
services/sm_manager/: Dockerfile  pyproject.toml  requirements.in
services/sm_manager/source/sm_manager/: main.py
