[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sm"
version = "0.1.0"
description = "Slot Machine service"
#authors = [{name = "", email = ""}]
requires-python = ">= 3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.urls]
Homepage = "https://example.com"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-randomly",
]
dev = [
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["source"]
namespaces = false
